--- a/stylos.css
+++ b/stylos.css
@@ -12,7 +12,7 @@ a {
 :root {
   --black: rgb(33, 33, 33);
   --gray: rgb(112, 117, 122);
-  --gray-search: rgb(230, 231, 233);
+  --gray-search: #e3e5e9;
   --blue_light: rgb(66, 133, 244);
   --red_light: rgb(234, 67, 53);
   --yellow: rgb(251, 188, 5);
@@ -49,15 +49,16 @@ header {
   width: 2rem;
 }
 .hero {
-  height: 80vh;
+  height: 34vh;
   width: 100%;
   display: grid;
   justify-content: center;
 }
 .hero .hero__title {
+  margin: 0 auto;
   margin-top: 4rem;
   width: 40vw;
-  height: 6rem;
+  height: 4rem;
 }
 .hero__title img {
   width: 100%;
@@ -67,6 +68,7 @@ header {
   height: 1.5rem;
   width: 81%;
   border: transparent;
+  outline: none;
 }
 .hero__input {
   border: 0.1rem solid var(--gray-search);
@@ -88,6 +90,7 @@ header {
 }
 .hero__button :hover {
   border: 0.1rem solid var(--gray-search);
+  box-shadow: ;
 }
 .hero__button button {
   border: none;
@@ -97,6 +100,9 @@ header {
   border-radius: 0.5rem;
   padding: 0.3rem 0.5rem;
   color: var(--gray);
+}
+footer {
+  margin-top: 16rem;
 }
 .info_container {
   height: 100%;
